--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ nav h1 a {
 	display: block;
 	margin: 1% auto;
 	width: 90%;
-	min-height: 50%;
+	max-height: 50%;
 	padding: 2px;
 }
 #restaurants-list li h1 {
